--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -385,53 +385,42 @@ body{
 }
 
 .profile-content{
-  display: grid; 
-  height: 100%;
+  display: grid;   grid-template-areas:
+    'user user user user side side'
+    'stats stats stats stats stats stats';
   grid-gap: 10px;
-  grid-template-columns: 1fr .5fr;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 2%;
+  margin-bottom: 3%;
 }
 
 .user-content{
-  margin: 30px;
-  margin-right: 5px;
+  grid-area: user;
   border-style: groove;
   border-radius: 20px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 2%;
 }
 
 .user-content h1{
-  padding-left: 50px;
-  padding-bottom: 10px;
-  margin-bottom: 30px;
   color: #0039ab;
   border-bottom-color: #4f5559;
   border-width: 1.5px;
   border-bottom-style: solid;
+  text-align: center;
+  margin-top:2%;
+  padding-bottom: 5px;
 }
 
 .user-content h1 span {
   color: #0f0f0f;
 }
 
-.user-content .details{
-  padding-right: 20px;
-  padding-left: 20px;
-}
-
 .user-content .details .field-name {
   font-weight: bolder;
-  width: 200px;
-}
-
-.user-content .details .field-value {
-  padding-left: 60px;
 }
 
 .user-content .details .field {
-  padding-bottom: 10px;
   display: flex;
   flex-direction: row;
 }
@@ -440,55 +429,76 @@ body{
   border: solid;
   border-radius: 5px;
   border-width: 1px;
-  margin: 20px;
 }
 
 .user-content .complete-profile {
   text-align: center;
 }
 
-.notification-tab{
-  margin: 30px;
-  margin-left: 5px;
+.side-container{
+  grid-area: side;
+}
+
+.side-tab{
+  border-radius: 12px;
   border-style: groove;
-  border-radius: 20px;
-  min-width: 100%;
-  min-height: 50%;
+  border-width: 1.5px;
+  position: relative;
+  height: 400px;
 }
 
-.notification-tab .menu-bar{
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+.nav-menu-items.profile ul{
   background-color: #2e2f30;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
-.menu-bar h2{
-  text-align: center;
+.nav-menu-items.profile a{
+  padding-top: 15px;
+  padding-bottom: 15px;
+  text-decoration: none;
   color: #ffffff;
-  margin: 0px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+}
+.nav-menu-items.profile li :hover {
+  background-color: #5c5c5c;
 }
 
-.notification-tab .notification-msg{
+.tab{
+  background-color: lightskyblue;
+  margin-right: 7%;
+  margin-left: 7%;
+  border-left-style: solid;
+  border-color: gray;
+  border-width: 1.5px;
+}
+
+.tab .notification-msg{
   display: flex;
   flex-direction: column;
 }
 
-.notification-tab .notification-msg .notification{
+.tab .notification-msg .notification{
   border-bottom-style: solid;
   border-bottom-color: gray;
   border-bottom-width: 1px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 20px;
   font-weight: 500;
   cursor: pointer;
   background-color: #ffffff;
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-top: 4%;
+  padding-bottom: 1%;
 }
 
-.notification-tab .notification-msg .notification[id="1"]{
-  background-color: #bad3ff;
+.tab .notification-msg .notification[id="1"]{
+  background-color: #dbf0ff;
+}
+
+.stats {
+  grid-area: stats;
+  background-color: chartreuse;
 }
 
 .admin-panel{
