--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,18 @@
 
         <main class="main">
             <div class="content">
-                <div class="content welcome">
-                    <h1>Welcome to Aatma Nirbhar</h1>
-                    <div class="get-started">
-                        <a href="https://www.google.com/"><h2>Get Started</h2></a>
-                    </div>
+                <div class="welcome">
+                    <ul class="box-area">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
                 </div>
 
                 <div class="content about">
