--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -19,7 +19,7 @@ body{
 
 .header{
   grid-area: header;
-  background-color: #032d99;
+  background-color: #22add4;
   color: #ffffff;
   display: flex;
   justify-content: space-evenly;
@@ -33,6 +33,10 @@ body{
   text-decoration: none;
 }
 
+.brand a span{
+  color: #000;
+}
+
 .header-links a{
   color: #ffffff;
   font-size: 20px;
@@ -40,6 +44,7 @@ body{
   display: block;
   text-align: center;
   padding: 14px 16px;
+  transition: 0.3s;
 }
 
 .header-links ul {
@@ -47,7 +52,7 @@ body{
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #032d99;
+  background-color: #22add4;
 }
 
 .header-links li{
@@ -55,11 +60,12 @@ body{
 }
 
 .header-links li a:hover {
-  background-color: #111;
+  background-color: #0f0f0f;
 }
 
 .main{
   grid-area: main;
+  background-color: #dbf7ff;
 }
 
 .footer{
@@ -72,7 +78,7 @@ body{
 .button {
   display: inline-block;
   border-radius: 4px;
-  background-color: #004eb5;
+  background-color: #049dc7;
   border: none;
   color: #FFFFFF;
   text-align: center;
@@ -121,6 +127,11 @@ body{
   margin: 15px;
 }
 
+.form {
+  box-shadow: 1px 1px 8px 1px #888888;
+  background-color: #ffffff;
+}
+
 .form form {
   width:500px;
   padding:10px;
@@ -129,6 +140,13 @@ body{
   display: flex;
   flex-direction: column;
   margin-top: 50px;
+}
+
+.register-link{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .register-link h2 {
@@ -258,16 +276,128 @@ body{
 }
 
 .content.welcome {
+  background: linear-gradient(to left, #03bafc, #02739c);
   width: 100%;
-  height: 600px;
-  background-color: black;
-  margin: 0;
-  background-size: cover;
+  height: 700px;
+  margin:0;
 }
-.content.welcome h1 {
-  color: #ffffff;
-  font-size: 90px;
+
+.box-area {
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 700px;
+  overflow-y: hidden;
+}
+
+.box-area li {
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 25px;
+  height: 25px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 20s linear infinite;
+  bottom: -150px;
+}
+
+.box-area li:nth-child(1){
+  left: 86%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+.box-area li:nth-child(2){
+  left: 12%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 1.5s;
+  animation-duration: 10s;
+}
+
+.box-area li:nth-child(3){
+  left: 70%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 15s;
+}
+
+.box-area li:nth-child(4){
+  left: 35%;
+  width: 100px;
+  height: 100px;
+  animation-delay: 5.5s;
+}
+
+.box-area li:nth-child(5){
+  left: 65%;
+  width: 40px;
+  height: 40px;
+  animation-delay: 0s;
+}
+
+.box-area li:nth-child(6){
+  left: 15%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3.5s;
+}
+
+.box-area li:nth-child(7){
+  left: 12%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 7s;
+}
+
+.box-area li:nth-child(8){
+  left: 37%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 1s;
+}
+
+.box-area li:nth-child(9){
+  left: 54%;
+  width: 30px;
+  height: 30px;
+  animation-delay: 0s;
+  animation-delay: 4s;
+}
+
+@keyframes animate{
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+  }
+  100%{
+      transform: translateY(-800px) rotate(360deg);
+      opacity: 0;
+  }
+}
+
+.content.welcome h1{
+  font-size: 60px;
   font-family: Century Gothic;
+}
+
+.content.welcome h2{
+  margin-top: 0;
+  color: #fff;
+  font-family: Century Gothic;
+}
+
+.content.welcome .h11{
+  margin-top: 0;
+  color: #005982;
+  margin-bottom: 20px;
+}
+
+.content.welcome .h12{
+  color: #034766;
 }
 
 .get-started{
@@ -275,6 +405,7 @@ body{
   display: inline-block;
   text-align: center;
   padding: 20px;
+  padding-top: 40px;
   margin: 5px;
 }
 
@@ -379,15 +510,17 @@ body{
 .content.services .list .block:hover{
   color: #000000;
   background-image: linear-gradient(to right, rgba(255,255,255,.6), rgba(0,0,0,0.005));
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bolder;
   transition: all 0.3s;
 }
 
 .profile-content{
-  display: grid;   grid-template-areas:
-    'user user user user side side'
-    'stats stats stats stats stats stats';
+  display: grid;
+  grid-template-areas:
+    'user user user side'
+    'user user user stats';
+  grid-template-columns: .21fr .21fr .21fr .37fr;
   grid-gap: 10px;
   margin-left: 10%;
   margin-right: 10%;
@@ -396,14 +529,16 @@ body{
 }
 
 .user-content{
+  background-color: #ffffff;
   grid-area: user;
-  border-style: groove;
-  border-radius: 20px;
+  box-shadow: 1px 1px 8px 1px #888888;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
   padding: 2%;
 }
 
 .user-content h1{
-  color: #0039ab;
+  color: #049fc9;
   border-bottom-color: #4f5559;
   border-width: 1.5px;
   border-bottom-style: solid;
@@ -413,7 +548,7 @@ body{
 }
 
 .user-content h1 span {
-  color: #0f0f0f;
+  color: #3d3d3d;
 }
 
 .user-content .details .field-name {
@@ -437,22 +572,37 @@ body{
 
 .side-container{
   grid-area: side;
+  background-color: #ffffff;
+  border-top-right-radius: 20px;
+  box-shadow: 1px 1px 8px 1px #888888;
 }
 
 .side-tab{
-  border-radius: 12px;
-  border-style: groove;
-  border-width: 1.5px;
+  border-top-right-radius: 20px;
   position: relative;
   height: 400px;
+  display: grid;
+  grid-template-areas:
+  'nav'
+  'tab'
+  'foot';
+  grid-template-rows: .2fr .74fr .06fr;
+}
+
+.nav{
+  grid-area: nav;
+}
+
+.nav-menu-items.side-nav {
+  border-top-left-radius: 0;
+  border-top-right-radius: 20px;
 }
 
 .nav-menu-items.side-nav ul{
   background-color: #2e2f30;
   margin-top: 0px;
   margin-bottom: 0px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
+  border-top-right-radius: 20px;
 }
 
 .nav-menu-items.side-nav a{
@@ -470,7 +620,6 @@ body{
   margin-top: 0px;
   margin-bottom: 0px;
   border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
 }
 
 .nav-menu-items.user-nav a{
@@ -493,6 +642,7 @@ body{
 }
 
 .tab{
+  grid-area: tab;
   background-color: lightskyblue;
   margin-right: 7%;
   margin-left: 7%;
@@ -501,14 +651,14 @@ body{
   border-width: 1.5px;
 }
 
-.tab .notification-msg{
+.tab{
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  max-height: 300px;
+  height: 100%;
 }
 
-.tab .notification-msg .notification{
+.tab .notification{
   border-bottom-style: solid;
   border-bottom-color: gray;
   border-bottom-width: 1px;
@@ -521,14 +671,69 @@ body{
   padding-bottom: 1%;
 }
 
-.tab .notification-msg .notification[id="1"]{
+.tab .notification[id="1"]{
   background-color: #dbf0ff;
 }
 
-.stats {
-  grid-area: stats;
-  background-color: chartreuse;
+.foot{
+  grid-area: foot;
+  height: 100%;
+  width: auto;
+  background-color: #2e2f30;
 }
+
+.stats-container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  grid-area: stats;
+  background-color: #ffffff;
+  border-bottom-right-radius: 20px;
+  box-shadow: 1px 1px 8px 1px #888888;
+  position: relative;
+}
+
+.stats-container h3{
+  margin:0;
+}
+
+.stats{
+  background: black;
+  color: #fff;
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(80px, 100px));
+  grid-template-rows: auto;
+  grid-gap: 0 10px;
+}
+
+.box{
+  position: relative;
+  height: 200px;
+  background: #034766;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+}
+
+.box:before {
+  content: '';
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  transform: skew(2deg, 2deg);
+  background: linear-gradient(315deg, #0ca7fa, #0c48fa);
+  z-index: -1;
+}
+
+.item{
+  position: relative;
+  padding:10px;
+  color: #fff;
+}
+
 
 .admin-panel{
   margin: 20px;
