--- a/templates/index.css
+++ b/templates/index.css
@@ -136,18 +136,107 @@ body{
     width: 100%;
 }
 
-.content.welcome {
+.welcome {
+    background: linear-gradient(to left, #03bafc, #02739c);
     width: 100%;
-    height: 600px;
-    background-color: black;
-    margin: 0;
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(./images/A2.jpg);
-    background-size: cover;
+    height: 100vh;
 }
-.content.welcome h1 {
-    color: #ffffff;
-    font-size: 90px;
-    font-family: Century Gothic;
+
+.box-area {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+}
+
+.box-area li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 25px;
+    height: 25px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 20s linear infinite;
+    bottom: -150px;
+}
+
+.box-area li:nth-child(1){
+    left: 86%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+.box-area li:nth-child(2){
+    left: 12%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 1.5s;
+    animation-duration: 10s;
+}
+
+.box-area li:nth-child(3){
+    left: 70%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 15s;
+}
+
+.box-area li:nth-child(4){
+    left: 35%;
+    width: 100px;
+    height: 100px;
+    animation-delay: 5.5s;
+}
+
+.box-area li:nth-child(5){
+    left: 65%;
+    width: 40px;
+    height: 40px;
+    animation-delay: 0s;
+}
+
+.box-area li:nth-child(6){
+    left: 15%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3.5s;
+}
+
+.box-area li:nth-child(7){
+    left: 12%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 7s;
+}
+
+.box-area li:nth-child(8){
+    left: 37%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 1s;
+}
+
+.box-area li:nth-child(9){
+    left: 54%;
+    width: 30px;
+    height: 30px;
+    animation-delay: 0s;
+    animation-delay: 4s;
+}
+
+@keyframes animate{
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+    }
+    100%{
+        transform: translateY(-800px) rotate(360deg);
+        opacity: 0;
+    }
 }
 
 .get-started{
