--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -140,6 +140,11 @@ body{
   background-color: #ffffff;
 }
 
+.form.no-box{
+  box-shadow: none;
+  background-color: inherit;
+}
+
 .form form {
   width:500px;
   padding:10px;
@@ -262,25 +267,42 @@ body{
   padding-left: 50px;
 }
 
-.job {
-  background-color: #c4d7ff;
-  width: 50%;
-  text-align: center;
-  padding:20px;
-  padding-bottom: 30px;
+.offers{
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  align-content: space-around;
+  padding-top: 30px;
 }
 
-.job h3 {
-  color: #000acc;
+.offer {
+  background-color: #fff;
+  width: 50%;
+  text-align: center;
+  box-shadow: 1px 1px 8px 1px #888888;
+  margin: 30px;
+}
+
+.offer h2 {
+  color: #0077c7;
   font-size: 30px;
   margin-bottom: 0px;
 }
 
-.job-info {
-  padding: 20px;
+.offer h3{
+  margin-top: 0;
+  font-size: 15px;
+}
+
+.offer h3 span {
+  color: #626363;
+  font-size: 10px;
+}
+
+.offer-info {
+  padding: 10px;
   background-color: #dcf4fa;
-  border-radius: 20px;
-  padding-bottom: 40px;
 }
 
 .content.welcome {
