--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -758,6 +758,17 @@ body{
   border-color: gray;
   border-width: 1.5px;
   height: 300px;
+  background-color: #dbf7ff;
+}
+
+.user-tab div{
+  font-size:25px;
+  padding-left:5%;
+  padding-top:10px;
+}
+
+.user-tab .wbg{
+  background-color: #fff;
 }
 
 .tab{
@@ -980,15 +991,17 @@ body{
 }
 
 .msgbox {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: auto;
   border-radius: 6px;
-  padding: 20px;
+  padding: 5%;
   align-content: center;
-  padding-left: 30px;
+  padding-left: 7%;
+  padding-right: 7%;
 }
 
 .msg {
+  width: 100%;
   padding-bottom: 5px;
   margin-left: 20px;
   margin-right: 50px;
