--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -384,18 +384,21 @@ body{
 
 .content.welcome {
   background: linear-gradient(to left, #03bafc, #02739c);
+  display: flex;
   width: 100%;
-  height: 700px;
+  height: auto;
   margin:0;
 }
 
 .box-area {
   position: absolute;
   top: 50px;
+  display: block;
   left: 0;
-  width: 100%;
-  height: 700px;
+  width: 95%;
+  height: 90%;
   overflow-y: hidden;
+  overflow-x: hidden;
   list-style-type: none;
 }
 
@@ -406,7 +409,7 @@ body{
   height: 25px;
   background: rgba(255, 255, 255, 0.2);
   animation: animate 20s linear infinite;
-  bottom: -150px;
+  bottom: 0px;
 }
 
 .box-area li:nth-child(1){
@@ -486,25 +489,33 @@ body{
   }
 }
 
+.content.welcome{
+  padding-bottom: 5%;
+}
+
 .content.welcome h1{
   font-size: 60px;
   font-family: Century Gothic;
+  text-align: center;
 }
 
 .content.welcome h2{
   margin-top: 0;
   color: #fff;
+  text-align: center;
   font-family: Century Gothic;
 }
 
 .content.welcome .h11{
-  margin-top: 0;
+  margin-top: 6%;
   color: #005982;
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .content.welcome .h12{
   color: #034766;
+  text-align: center;
 }
 
 .get-started{
@@ -1051,4 +1062,12 @@ body{
   width: fit-content;
   height: fit-content;
   margin: 0;
+}
+
+.insta {
+  background-image: url("/images/instagram.png");
+}
+
+.fb {
+  background-image: url("/images/facebook.png");
 }
