--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -85,6 +85,32 @@ body{
   margin-right: 10px;
 }
 
+.brand2{
+  height: 6rem;
+  width: 100%;
+  display: none;
+}
+
+.brand2 a{
+  position: relative;
+  color: #034766;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  height: 100%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin-left: 18px;
+  width: 100vh;
+}
+.menu-btn-icon i{
+  font-size: 40px;
+  color: #032d41;
+  padding-right: 10px;
+  cursor: pointer;
+  display: none;
+}
 .header-links a{
   color: #ffffff;
   font-size: 20px;
@@ -94,7 +120,6 @@ body{
   padding: 14px 16px;
   transition: 0.3s;
 }
-
 .header-links ul {
   list-style-type: none;
   margin: 0;
@@ -102,17 +127,44 @@ body{
   overflow: hidden;
   background-color: #22add4;
 }
-
 .header-links li{
   float:right
 }
-
 .header-links li a:hover {
   background-color: rgba(70, 193, 227, 0.5);
 }
-
 .header-links .Y{
   background-color: #46c1e3;
+}
+
+@media (max-width: 940px){
+  nav ul{
+    position: fixed;
+    top:6rem;
+    left:-100%;
+    height: 200vh;
+    width: 100%;
+    display: block;
+    z-index: 100;
+  }
+  #menu-btn:checked ~ nav ul{
+    left: 0%;
+  }
+  .header-links li{
+    float: none;
+  }
+  .brand{
+    display: none;
+  }
+  .brand2{
+    display: flex;
+  }
+  .brand2 a{
+    font-size: 45px;
+  }
+  .menu-btn-icon i{
+    display: block;
+  }
 }
 
 .main{
