--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -104,7 +104,7 @@ body{
   margin-left: 18px;
   width: 100vh;
 }
-.menu-btn-icon i{
+i{
   font-size: 40px;
   color: #032d41;
   padding-right: 10px;
@@ -138,17 +138,23 @@ body{
 }
 
 @media (max-width: 940px){
-  nav ul{
+  .header nav ul{
     position: fixed;
     top:6rem;
-    left:-100%;
+    transform: translateX(-400vw);
     height: 200vh;
     width: 100%;
     display: block;
     z-index: 100;
+    transition: 0.5s;
   }
-  #menu-btn:checked ~ nav ul{
-    left: 0%;
+
+  .header nav a {
+    padding-top: 40px;
+    font-size: 30px;
+  }
+  .header .side ul{
+    transform: translateX(-191vw);
   }
   .header-links li{
     float: none;
